--- a/discord.html
+++ b/discord.html
@@ -26,8 +26,8 @@
   </header>
   <section class="content">
     
-        <p><a href="https://discord.gg/deinserver" target="_blank" class="button">Discord beitreten</a></p>
-        <p><code>fivem://connect/deine-ip</code></p>
+        <p><a href="https://discord.gg/EPSaaX7eQW" target="_blank" class="button">Discord beitreten</a></p>
+        <p><code>fivem://connect/cfx.re/join/9jlb3e</code></p>
     
   </section>
   <footer>
