--- a/discord.html
+++ b/discord.html
@@ -19,7 +19,7 @@
   </nav>
   <main>
     <p>Tritt unserem Discord bei und werde Teil der Community!</p>
-    <p>🔗 <a href="https://discord.gg/dein-server" target="_blank" style="color:#66ccff;">Jetzt beitreten</a></p>
+    <p>🔗 <a href="https://discord.gg/EPSaaX7eQW" target="_blank" style="color:#66ccff;">Jetzt beitreten</a></p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
