--- a/index.html
+++ b/index.html
@@ -2,96 +2,8 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OneLife RP</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to right, #1e1e2f, #2c2c47);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      padding: 2rem;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    header img {
-      max-width: 150px;
-      margin-bottom: 1rem;
-      animation: slideDown 1s ease-out;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    nav {
-      display: flex;
-      gap: 1rem;
-      margin: 1rem 0;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #fff;
-      background-color: #ff4d4d;
-      padding: 0.75rem 1.5rem;
-      border-radius: 8px;
-      transition: background-color 0.3s, transform 0.3s;
-    }
-
-    nav a:hover {
-      background-color: #ff1a1a;
-      transform: scale(1.05);
-    }
-
-    main {
-      max-width: 600px;
-      text-align: center;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      animation: fadeInUp 1.2s ease-in-out;
-    }
-
-    footer {
-      margin-top: auto;
-      padding: 1rem;
-      font-size: 0.9rem;
-      opacity: 0.7;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes slideDown {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  <title>OneLife RP – Startseite</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -108,11 +20,12 @@
   </nav>
 
   <main>
-    <p>Erlebe ein einzigartiges Roleplay-Erlebnis mit OneLife RP. Tauche ein in eine Welt voller Möglichkeiten, Entscheidungen und Geschichten.</p>
+    <p>🌆 Tauche ein in die Welt von OneLife RP – ein realistisches FiveM Roleplay-Erlebnis mit Spannung, Freiheit und tiefen Stories.</p>
+    <p>🚔 Polizeieinsätze, 🚑 Rettungsdienste, 🚗 Tuning & illegale Rennen – alles ist möglich!</p>
   </main>
 
   <footer>
-    &copy; 2025 OneLife RP – Alle Rechte vorbehalten.
+    &copy; 2025 OneLife RP – Dein Leben. Deine Regeln.
   </footer>
 </body>
 </html>
