--- a/news.html
+++ b/news.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>News – OneLife RP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OneLife RP – News</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="onelife-logo.jpg" alt="OneLifeRP Logo">
-    <h1>Neuigkeiten</h1>
+    <h1>News</h1>
   </header>
   <nav>
     <a href="index.html">Start</a>
+    <a href="news.html">News</a>
     <a href="infos.html">Infos</a>
     <a href="regeln.html">Regeln</a>
     <a href="team.html">Team</a>
     <a href="discord.html">Discord</a>
   </nav>
   <main>
-    <p>Bleib auf dem Laufenden mit den neuesten Infos und Updates zu OneLife RP!</p>
-    <p>📅 Server-Update am 20. Mai – neue Features, Bugfixes und mehr!</p>
+    <p>📰 Bleib informiert! Hier findest du alle Neuigkeiten rund um OneLife RP – neue Features, Regeländerungen und Serverevents.</p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
