--- a/infos.html
+++ b/infos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Infos – OneLife RP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OneLife RP – Infos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +14,13 @@
   <nav>
     <a href="index.html">Start</a>
     <a href="news.html">News</a>
+    <a href="infos.html">Infos</a>
     <a href="regeln.html">Regeln</a>
     <a href="team.html">Team</a>
     <a href="discord.html">Discord</a>
   </nav>
   <main>
-    <p>Hier findest du alle wichtigen Infos zu unserem Roleplay-Server.</p>
-    <p>🚗 Fahrzeuge, 🏢 Berufe, 💰 Wirtschaft – alles übersichtlich erklärt.</p>
+    <p>ℹ️ Alles, was du wissen musst: Einstieg ins RP, Berufswahl, Fraktionen, Wirtschaftssystem und vieles mehr.</p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
