--- a/regeln.html
+++ b/regeln.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Regeln – OneLife RP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OneLife RP – Regeln</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="onelife-logo.jpg" alt="OneLifeRP Logo">
-    <h1>Server-Regeln</h1>
+    <h1>Regelwerk</h1>
   </header>
   <nav>
     <a href="index.html">Start</a>
     <a href="news.html">News</a>
     <a href="infos.html">Infos</a>
+    <a href="regeln.html">Regeln</a>
     <a href="team.html">Team</a>
     <a href="discord.html">Discord</a>
   </nav>
   <main>
-    <p>Unsere Regeln sorgen für ein faires und realistisches RP-Erlebnis.</p>
-    <p>⚖️ Respekt, Fairness und Immersion stehen an erster Stelle.</p>
+    <p>📜 Unsere Regeln sorgen für ein faires Miteinander. Lies sie dir aufmerksam durch, bevor du spielst!</p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
