--- a/team.html
+++ b/team.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Team – OneLife RP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OneLife RP – Team</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,11 +16,11 @@
     <a href="news.html">News</a>
     <a href="infos.html">Infos</a>
     <a href="regeln.html">Regeln</a>
+    <a href="team.html">Team</a>
     <a href="discord.html">Discord</a>
   </nav>
   <main>
-    <p>Lerne das engagierte Team hinter OneLife RP kennen.</p>
-    <p>👮 Admins, 👨‍💻 Entwickler und 🎙️ Community-Manager stellen sich vor.</p>
+    <p>👥 Hier stellen wir unser engagiertes Team vor – Supporter, Admins und Entwickler, die OneLife RP möglich machen.</p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
