--- a/discord.html
+++ b/discord.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Discord – OneLife RP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OneLife RP – Discord</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="onelife-logo.jpg" alt="OneLifeRP Logo">
-    <h1>Discord-Server</h1>
+    <h1>Discord</h1>
   </header>
   <nav>
     <a href="index.html">Start</a>
@@ -16,11 +17,12 @@
     <a href="infos.html">Infos</a>
     <a href="regeln.html">Regeln</a>
     <a href="team.html">Team</a>
+    <a href="discord.html">Discord</a>
   </nav>
   <main>
-    <p>Tritt unserem Discord bei und werde Teil der Community!</p>
-    <p>🔗 <a href="https://discord.gg/EPSaaX7eQW" target="_blank" style="color:#66ccff;">Jetzt beitreten</a></p>
+    <p>💬 Tritt unserem Discord bei und werde Teil der Community! Tausche dich aus, erhalte Hilfe und bleib auf dem Laufenden.</p>
   </main>
   <footer>&copy; 2025 OneLife RP</footer>
 </body>
 </html>
+
