--- a/discord.html
+++ b/discord.html
@@ -1,2 +1,26 @@
-<a href="https://discord.gg/EPSaaX7eQW" target="_blank" style="color:#0ff; font-weight:bold;">Zum Discord</a>
-
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Discord – OneLife RP</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <img src="onelife-logo.jpg" alt="OneLifeRP Logo">
+    <h1>Discord-Server</h1>
+  </header>
+  <nav>
+    <a href="index.html">Start</a>
+    <a href="news.html">News</a>
+    <a href="infos.html">Infos</a>
+    <a href="regeln.html">Regeln</a>
+    <a href="team.html">Team</a>
+  </nav>
+  <main>
+    <p>Tritt unserem Discord bei und werde Teil der Community!</p>
+    <p>🔗 <a href="https://discord.gg/EPSaaX7eQW" target="_blank" style="color:#66ccff;">Jetzt beitreten</a></p>
+  </main>
+  <footer>&copy; 2025 OneLife RP</footer>
+</body>
+</html>
